fixed hamburger icon
Change-Id: Ied012f4d0ec5f76b7e1cfd229b7fe1bcd1049299

--- a/collaboratory_sphinx_theme/layout.html
+++ b/collaboratory_sphinx_theme/layout.html
@@ -15,13 +15,13 @@
         <a class="project-title" href="{{ pathto('index') }}">{{project}}</a>
 
         <a class="hbpdoc-toc-toggle pull-right" href>
-            <span class="md-menu"></span> <span class="sr-only icon-text">Menu</span>
+            <span class="zmdi zmdi-menu"></span> <span class="sr-only icon-text">Menu</span>
         </a>
     </section>
     <section class="hbpdoc-main">
         <nav class="hbpdoc-sidebar hbpdoc-container">
             <a class="hbpdoc-toc-toggle pull-right" href>
-                <span class="md-menu"></span> <span class="sr-only icon-text">Menu</span>
+                <span class="zmdi zmdi-menu"></span> <span class="sr-only icon-text">Menu</span>
             </a>
             {{ sidebar() }}
         </nav>
