--- a/hbp_sphinx_theme/layout.html
+++ b/hbp_sphinx_theme/layout.html
@@ -7,6 +7,11 @@
 
 {% block extrahead %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    .search .context {
+        display: none;
+    }
+</style>
 {% endblock %}
 
 {% block relbar1 %}
@@ -53,7 +58,7 @@
                     {% endif %}
                 </aside>
 
-                {{ body }}
+                {% block body %} {% endblock %}
             </div>
 
             <aside class="hbpdoc-hnav hbpdoc-hnav-bottom">
